--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "researchElectron",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "private": true,
   "description": "",
   "main": "main.js",
@@ -16,9 +16,12 @@
       "buildResources": "build-assets"
     },
     "win": {
-      "publish": [
-        "github"
-      ],
+      "publish": {
+        "provider": "s3",
+        "bucket": "sbs-testing",
+        "acl": "private",
+        "endpoint": "https://s3.console.aws.amazon.com/s3/buckets/sbs-testing"
+      },
       "extraResources": [
         "./*.dll"
       ]
@@ -28,6 +31,7 @@
     "start": "electron .",
     "dev": "nodemon --exec electron .",
     "build": "npx tsc",
+    "build-s3": "electron-builder --win --publish always",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dist": "set GH_TOKEN=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 && electron-builder --win --publish always",
     "package-win": "electron-packager . --overwrite --platform=win32 --arch=x64 --asar --icon=assets/icons/SBS-64x64.ico --prune=false --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"ResearchElectron\""
