--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/FelicioAngga/ResearchElectron"
+    "url": "https://gitlab.com/felicioangga004/researchelectron"
   },
   "build": {
     "appId": "ResearchElectron",
@@ -19,8 +19,9 @@
       "publish": {
         "provider": "s3",
         "bucket": "sbs-testing",
-        "acl": "private",
-        "endpoint": "https://s3.console.aws.amazon.com/s3/buckets/sbs-testing"
+        "acl": "public-read",
+        "region": "ap-southeast-1",
+        "path": "/sbsElectron"
       },
       "extraResources": [
         "./*.dll"
@@ -58,6 +59,8 @@
     "@journeyapps/sqlcipher": "^5.3.1",
     "@types/node": "^18.11.9",
     "active-win": "^7.7.2",
+    "aws4": "^1.11.0",
+    "dotenv": "^16.0.3",
     "electron-log": "^4.4.8",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^5.3.0",
