--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,13 +5,12 @@ deploy-job:
   stage: deploy 
   image: node:latest
   before_script:
-    - apt-get update --allow-releaseinfo-change -y
-    - apt-get install awscli -y
+    - apk update --allow-releaseinfo-change -y
+    - apk add awscli -y
     - aws configure set aws_access_key_ud "$AWS_ACCESS_KEY_ID"
     - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"    
     - aws configure set aws_default_region "$AWS_DEFAULT_REGION"
   
-  script: 
-    - npm install windows-build-tools
+  script:
     - npm i
     - npm run build-s3
