--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ deploy-job:
   stage: deploy 
   image: node:latest
   before_script:
-    - apk-get update --allow-releaseinfo-change -y
+    - apt-get update --allow-releaseinfo-change -y
     - apt-get install awscli -y
     - aws configure set aws_access_key_ud "$AWS_ACCESS_KEY_ID"
     - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"    
