--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,5 +17,7 @@ deploy-job:
   script:
     - npm -g install npm node-gyp
     - npm install @vscode/vsce
+    - rm -rf package-lock.json
+    - rm -rf node_modules
     - npm i
     - npm run build-s3
