--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ deploy-job:
     - apt-get update --allow-releaseinfo-change -y
     - apt-get install -y build-essential
     - apt-get install awscli -y
-    - apt install wine64
+    - apt install wine64 -y
     - aws configure set aws_access_key_ud "$AWS_ACCESS_KEY_ID"
     - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"    
     - aws configure set aws_default_region "$AWS_DEFAULT_REGION"
