--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@ deploy-job:
   image: node:latest
   before_script:
     - apt-get update --allow-releaseinfo-change -y
-    - apt install wine64 -y
+    - dpkg --add-architecture i386 && apt-get update &&
+    - apt install wine32 -y
     - apt-get install -y build-essential
     - apt-get install awscli -y
     - aws configure set aws_access_key_ud "$AWS_ACCESS_KEY_ID"
