--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,14 +12,12 @@ deploy-job:
     - apt install wine32 -y
     - apt-get install -y build-essential
     - apt-get install awscli -y
-    - aws configure set aws_access_key_ud "$AWS_ACCESS_KEY_ID"
+    - aws configure set aws_access_key_id "$AWS_ACCESS_KEY_ID"
     - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"    
     - aws configure set aws_default_region "$AWS_DEFAULT_REGION"
   
   script:
     - npm -g install npm node-gyp
     - npm install @vscode/vsce
-    - rm -rf package-lock.json
-    - rm -rf node_modules
     - npm i
     - npm run build-s3
