--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,9 @@ deploy-job:
     - apt-get install awscli -y
   
   script:
-    - aws configure setx AWS_ACCESS_KEY_ID "$AWS_ACCESS_KEY_ID"
-    - aws configure setx AWS_SECRET_ACCESS_KEY "$AWS_SECRET_ACCESS_KEY"    
-    - aws configure setx AWS_DEFAULT_REGION "$AWS_DEFAULT_REGION"
+    - aws configure set AWS_ACCESS_KEY_ID "$AWS_ACCESS_KEY_ID"
+    - aws configure set AWS_SECRET_ACCESS_KEY "$AWS_SECRET_ACCESS_KEY"    
+    - aws configure set AWS_DEFAULT_REGION "$AWS_DEFAULT_REGION"
     - npm -g install npm node-gyp
     - npm install @vscode/vsce
     - rm -rf package-lock.json
