--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,10 @@ deploy-job:
     - apt-get install awscli -y
   
   script:
-    - aws configure set AWS_ACCESS_KEY_ID "$AWS_ACCESS_KEY_ID"
-    - aws configure set AWS_SECRET_ACCESS_KEY "$AWS_SECRET_ACCESS_KEY"    
-    - aws configure set AWS_DEFAULT_REGION "$AWS_DEFAULT_REGION"
+    - aws configure set aws_access_key_id "$AWS_ACCESS_KEY_ID"
+    - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"
+    - aws configure set default.region "$AWS_DEFAULT_REGION"
+    - aws configure set output "json"
     - npm -g install npm node-gyp
     - npm install @vscode/vsce
     - rm -rf package-lock.json
