Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,4 +23,6 @@ deploy-job:
     - rm -rf package-lock.json
     - rm -rf node_modules
     - npm i
+    - cat ~/.aws/credential
     - npm run build-s3
+    - aws --version
