--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,10 +15,10 @@ deploy-job:
     # - apt install wine32 -y
     # - apt-get install -y build-essential
     # - apt-get install awscli -y
-    - aws configure set aws_access_key_id "$AWS_ACCESS_KEY_ID"
-    - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"
-    - aws configure set default.region "$AWS_DEFAULT_REGION"
-    - aws configure set output "json" 
+    # - aws configure set aws_access_key_id "$AWS_ACCESS_KEY_ID"
+    # - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"
+    # - aws configure set default.region "$AWS_DEFAULT_REGION"
+    # - aws configure set output "json" 
   
   script:
     # - npm -g install npm node-gyp
