--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ deploy-job:
   stage: deploy 
   image: node:latest
   script:
-    - apt-get update --allow-releaseinfo-change -y
+    # - apt-get update --allow-releaseinfo-change -y
     - echo $AWS_ACCESS_KEY_ID
     - echo $AWS_SECRET_ACCESS_KEY
     - echo $AWS_DEFAULT_REGION
