--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,24 +6,24 @@ variables:
 deploy-job:
   stage: deploy 
   image: node:latest
-  script:
-    # - apt-get update --allow-releaseinfo-change -y
+  before_script:
+    - apt-get update --allow-releaseinfo-change -y
     - echo $AWS_ACCESS_KEY_ID
     - echo $AWS_SECRET_ACCESS_KEY
     - echo $AWS_DEFAULT_REGION
-    # - dpkg --add-architecture i386 && apt-get update &&
-    # - apt install wine32 -y
-    # - apt-get install -y build-essential
-    # - apt-get install awscli -y
-    # - aws configure set aws_access_key_id "$AWS_ACCESS_KEY_ID"
-    # - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"
-    # - aws configure set default.region "$AWS_DEFAULT_REGION"
-    # - aws configure set output "json"  
+    - dpkg --add-architecture i386 && apt-get update &&
+    - apt install wine32 -y
+    - apt-get install -y build-essential
+    - apt-get install awscli -y
+    - aws configure set aws_access_key_id "$AWS_ACCESS_KEY_ID"
+    - aws configure set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"
+    - aws configure set default.region "$AWS_DEFAULT_REGION"
+    - aws configure set output "json" 
   
-  # script:
-    # - npm -g install npm node-gyp
-    # - npm install @vscode/vsce
-    # - rm -rf package-lock.json
-    # - rm -rf node_modules
-    # - npm i
-    # - npm run build-s3
+  script:
+    - npm -g install npm node-gyp
+    - npm install @vscode/vsce
+    - rm -rf package-lock.json
+    - rm -rf node_modules
+    - npm i
+    - npm run build-s3
