--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@master
-      - with:
+        with:
           ref: feature/github-actions
       - uses: actions/setup-node@master
         with:
