--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
       - name: install depedencies
         run: npm install
       - name: set access key
-        run: set AWS_ACCESS_KEY_ID=${{secret.AWS_ACCESS_KEY_ID}}
+        run: set AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}
       - name: set secret key
-        run: set AWS_SECRET_ACCESS_KEY=${{secret.AWS_SECRET_ACCESS_KEY}}
+        run: set AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}
