--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: 16.15.1
+      - name: install node tools
+        run: npm install --global --production windows-build-tools@4.0.0
       - name: install node-gyp
         run: npm install --global node-gyp@latest
       - name: Set node config to use python2.7
@@ -21,7 +23,7 @@ jobs:
       - name: Set node config to set msvs_version to 2015
         run: npm config set msvs_version 2015
       - name: Set node config to set msvs_version to 2015
-        run: set path=%path%;C:\Program Files (x64)\Microsoft Visual Studio\2019\Community\MSBuild\Current\Bin
+        run: set path=%path%;C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Current\Bin
       - name: install depedencies
         run: npm install
       - name: set access key
