--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 16.15.1
       - name: install node tools
-        run: npm install --global --production windows-build-tools@4.0.0
+        run: npm install --global --production windows-build-tools@latest
       - name: install node-gyp
         run: npm install --global node-gyp@latest
       - name: Set node config to use python2.7
