--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: 16.15.1
-      - name: install node tools
-        run: npm install --global --production windows-build-tools@latest
+      - name: install vsc
+        run: npm install @vscode/vsce
       - name: install node-gyp
         run: npm install --global node-gyp@latest
       - name: Set node config to use python2.7
