--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set node config to set msvs_version to 2015
         run: npm config set msvs_version 2015
       - name: Set node config to set msvs_version to 2015
-        run: set path=%path%;C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Current\Bin
+        run: set path=C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin
       - name: install depedencies
         run: npm install
       - name: set access key
