--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,15 +22,11 @@ jobs:
         run: npm config set python python2.7
       - name: Set node config to set msvs_version to 2015
         run: npm config set msvs_version 2015
-      - name: check dir
-        run: ls
-      - name: check path
-        run: pwd
-      - name: Set node config to set msvs_version to 2015
-        run: set path=C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin
       - name: install depedencies
         run: npm install
       - name: set access key
         run: set AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}
       - name: set secret key
         run: set AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}
+      - name: test build
+        run: npm run build-s3
