--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,15 @@ jobs:
       - name: Set node config to use python2.7
         run: npm config set python python2.7
       - name: Set node config to set msvs_version to 2015
-        run: npm config set msvs_version 2015
+        run: npm config set msvs_version 2017
       - name: install depedencies
-        run: npm install --ignore-script 
+        run: npm install 
+      - name: rm node_gyp
+        run: rm -rf ~/.node_gyp
+      - name: install all
+        run: npm install
+      - name: rebuild
+        run: npm rebuild
       - name: set access key
         run: set AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}
       - name: set secret key
