--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,13 @@ jobs:
           node-version: 16.15.1
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.1
+        with:
+          vs-version: '15.9.51'
       - name: install node-gyp
         run: npm install --global node-gyp@latest
       - name: Set node config to use python2.7
         run: npm config set python python2.7
-      - name: Set node config to set msvs_version to 2015
+      - name: Set node config to set msvs_version to 2017
         run: npm config set msvs_version 2017
       - name: install depedencies
         run: npm install 
