--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.1
         with:
-          vs-version: '[15.9.50,15.9.51]'
+          vs-version: '[15.9.50,15.9.51)'
       - name: Set node config to use python2.7
         run: npm config set python python2.7
       - name: Set node config to set msvs_version to 2017
