--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: 16.15.1
+      - name: update npm
+        run: npm update -g npm 
       - name: clear cache
         run: npm cache clean --force
       - name: Add msbuild to PATH
@@ -23,7 +25,7 @@ jobs:
       - name: Set node config to set msvs_version to 2017
         run: npm config set msvs_version 2017
       - name: install depedencies
-        run: npm install 
+        run: npm install --force
       - name: rebuild
         run: npm rebuild
       - name: set access key
