--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,11 @@ jobs:
         run: npm install --force
       - name: rebuild
         run: npm rebuild
-      - name: set access key
-        run: set AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}
-      - name: set secret key
-        run: set AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}
-      - name: check credential
-        run: echo ${{secrets.AWS_SECRET_ACCESS_KEY}}
+      - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+        aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+        aws-region: ${{secrets.AWS_DEFAULT_REGION}}
       - name: test build
         run: npm run build-s3
