--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 16.15.1
       - name: update npm
-        run: npm update -g npm 
+        run: npm install -g npm
       - name: clear cache
         run: npm cache clean --force
       - name: Add msbuild to PATH
