--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 16.15.1
       - name: update npm
-        run: npm install -g npm
+        run: npm update -g npm
       - name: clear cache
         run: npm cache clean --force
       - name: Add msbuild to PATH
@@ -26,8 +26,6 @@ jobs:
         run: npm config set msvs_version 2017
       - name: install depedencies
         run: npm install --force
-      - name: rebuild
-        run: npm rebuild
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
